# word-arena

./: .dockerignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  Dockerfile  GAME_USER_STORY.md  README.md  docker-compose.yml  flake.nix  generate_entities.sh  package-lock.json  package.json  rust-toolchain.toml  test_auth.sh
.github/workflows/: build-and-publish.yml
frontend/: .dockerignore  .env.development  .env.example  Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/components/auth/: AuthProvider.tsx  DevLoginForm.tsx  LoginButton.tsx  SessionConflictModal.tsx
frontend/src/components/game/: ComponentStateIntegration.test.tsx  CountdownTimer.tsx  Game.test.tsx  Game.tsx  GameBoard.test.tsx  GameBoard.tsx  GameBoardContainer.test.tsx  GameLayout.tsx  GameMessageHandling.test.tsx  (+9 more)
frontend/src/hooks/: useWebSocket.ts
frontend/src/services/: gameHttpClient.test.ts  gameHttpClient.ts  websocketService.test.ts  websocketService.ts
frontend/src/store/: authStore.test.ts  authStore.ts  gameStore.test.ts  gameStore.ts
frontend/src/types/: index.ts
game-core/: Cargo.toml
game-core/src/: cleanup.rs  game_events.rs  game_state.rs  lib.rs  scoring.rs  word_validation.rs
game-core/tests/: basic_tests.rs  common.rs
game-persistence/: Cargo.toml
game-persistence/src/: connection.rs  lib.rs
game-persistence/src/entities/: users.rs
game-persistence/src/repositories/: user_repository.rs
game-server/: Cargo.toml
game-server/src/: auth.rs  config.rs  game_manager.rs  lib.rs  main.rs  matchmaking.rs
game-server/src/websocket/: connection.rs  handlers.rs  integration_tests.rs  mod.rs  rate_limiter.rs
game-server/tests/: auth_validation_tests.rs  game_manager_tests.rs  test_helpers.rs
game-types/: Cargo.toml
game-types/src/: errors.rs  game.rs  lib.rs  messages.rs  user.rs
migration/: Cargo.toml
migration/src/: m20240101_000001_create_users_table.rs
nginx/: nginx.conf
scripts/: download_and_split_words.sh
shared/words/: word_list.txt
(+3 files in other folders)
