[workspace]
resolver = "3"
members = [
    "game-core",
    "game-types", 
    "game-persistence",
    "game-server",
    "migration"
]

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
ts-rs = { version = "11.0", features = ["uuid-impl"] }
sea-orm = { version = "1.0", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros"] }
sea-orm-migration = "1.0"
warp = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
futures-util = "0.3"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
jsonwebtoken = "9.0"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
thiserror = "1.0"
async-trait = "0.1"