[package]
name = "game-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
warp = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
uuid = { workspace = true }
game-core = { path = "../game-core" }
game-types = { path = "../game-types" }
game-persistence = { path = "../game-persistence" }
tracing = "0.1"
tracing-subscriber = "0.3"
futures-util = "0.3"
dashmap = "6.1"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
sha2 = "0.10"
sea-orm = { workspace = true }
regex = "1.0"

[dev-dependencies]
tokio-test = "0.4"
futures = "0.3"
serde_json = "1.0"
migration = { path = "../migration" }
